# messeger-privat

./: .gitignore  README.md  package-lock.json
AnonymousMessage/android/: README.md
AnonymousMessage/android/app/: build.gradle
AnonymousMessage/android/app/src/main/: AndroidManifest.xml
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/model/: User.java
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/network/: ApiClient.java
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/receiver/: NetworkChangeReceiver.java
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/service/: TorService.java
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/ui/activity/: RegistrationActivity.java
AnonymousMessage/android/app/src/main/java/com/anonymousmessage/android/utils/: EncryptionUtils.java  ValidationUtils.java
AnonymousMessage/android/app/src/main/res/layout/: activity_registration.xml
AnonymousMessage/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
AnonymousMessage/docs/: architecture.md
AnonymousMessage/ios/: README.md
AnonymousMessage/pc/: CMakeLists.txt  README.md
AnonymousMessage/pc/src/core/: Application.cpp  Application.h
AnonymousMessage/pc/src/network/: TorManager.cpp  TorManager.h
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymousemessage/adapters/: MessageAdapter.java
android/app/src/main/java/com/anonymousemessage/models/: Message.java  User.java  UserKeys.java
android/app/src/main/java/com/anonymousemessage/service/: CallService.java  EncryptionService.java  SessionManager.java  TorService.java  VoiceRecordService.java
android/app/src/main/java/com/anonymousemessage/ui/activity/: ChatActivity.java  LoginActivity.java  MainActivity.java  RegisterActivity.java  SplashActivity.java  VerificationActivity.java
android/app/src/main/java/com/anonymousemessage/utils/: EncryptionUtil.java
android/app/src/main/res/drawable/: ic_logo.xml  message_input_background.xml  send_button_background.xml
android/app/src/main/res/layout/: activity_chat.xml  activity_splash.xml  activity_verification.xml  item_message_incoming.xml  item_message_outgoing.xml
android/app/src/main/res/values/: strings.xml
ios/: AnonymousMessage-Bridging-Header.h  AppDelegate.swift  EncryptionManager.swift  Entitlements.plist  Info.plist  LaunchScreen.storyboard  Podfile  SecurityManager.swift  TorBridge.swift  TorBridgeModule.m  TorManager.swift
ios/Services/: MessageService.swift  UserService.swift
ios/src/: App.js
pc/: CMakeLists.txt
pc/src/: main.cpp
pc/src/core/: EncryptionManager.cpp  EncryptionManager.h  SessionManager.cpp  SessionManager.h  User.cpp  User.h
pc/src/network/: TorClient.cpp  TorClient.h
pc/src/ui/: MainWindow.cpp  MainWindow.h
